--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <img class="DSimpar" src="/Assets/imgs/D1.jpeg" alt="CV">
           <div class="accordion-body">
             <strong>Primer Desafio.</strong> A continuación, puedes revisar mi primer desafio el cual contemplaba crear un CV en HTML, utilizando la estructura básica de HTML y todas las etiquetas que aprendimos en la primera clase con el profe Ignacio el tutor Francisco.
-            <a href="https://zonafro.github.io/Repo-Desafio-N-2/" target="GITDesadio1" class="text-success fw-bold">Ingresa al CV en Html</a>
+            <a href="https://zonafro.github.io/Desafio-1-CV-en-Html/" target="GITDesadio1" class="text-success fw-bold">Ingresa al CV en Html</a>
           </div>
         </div>
       </div>
