--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <img class="DSpar" src="/Assets/imgs/D2.jpeg" alt="Heladeria">
           <div class="accordion-body">
             <strong>Segundo Desafio.</strong> En esta oportunidad empece a conocer CSS para darle estilo a lo construido en Html. Aprendi a usar colores, bordes, margen y padding entre otros. Ya solte la mano con Html, por lo tanto cree mi primer Landing Page de una Heladeria, aparte de aprender cosas nuevas en Desafio Latam, también empece a innovar en mis proyectos para generar mayor creatividad. 
-            <a href="https://github.com/Zonafro/Repo-Desafio-N-2" target="GITDesadio2" class="text-success fw-bold">Conoce la mejor Heladeria de Santiago aqui en ZONAFRO</a>
+            <a href="https://zonafro.github.io/Repo-Desafio-N-2/" target="GITDesadio2" class="text-success fw-bold">Conoce la mejor Heladeria de Santiago aqui en ZONAFRO</a>
           </div>
         </div>
       </div>
