Agregue pages a desafios

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <img class="DSimpar" src="/Assets/imgs/D3.jpeg" alt="jirafa">
           <div class="accordion-body">
             <strong>Tercer Desafio.</strong> En lenguaje coloquial "Ignacio tiro toda la carne a la parrilla", esta clase tuvo muchisima materia en un solo dia para un desafio que a simple vista se veia facil de realizar, sin embargo creo que el Posicionamiento en CSS es una de las tareas que mayor tiempo requiere. Todo se descuadra, se desborda, las imagenes son un dolor de cabeza al intentar darle su tamaño ideal y definitivamente hay que tener una basta experiencia para terminar un proyecto de este tipo en corto plazo. La creatividad es importante para mi cuando estoy aprendiendo, por lo cual el mamifero mas alto del mundo es el protagonista de este Page.
-            <a href="https://github.com/Zonafro/Desafio-N-3" target="GITDesadio3" class="text-success fw-bold">Entra a JIRAFILANDIA</a>
+            <a href="https://zonafro.github.io/Desafio-N-3/" target="GITDesadio3" class="text-success fw-bold">Entra a JIRAFILANDIA</a>
           </div>
         </div>
       </div>
@@ -113,7 +113,7 @@
           <img class="DSpar" src="/Assets/imgs/D4.jpeg" alt="Cuppon">
           <div class="accordion-body">
             <strong>Cuarto Desafio.</strong> Aprendiendo bootstrap en esta clase, me di cuenta que es mas amigable y facilita mas las cosas al momento de ver todas las dunciones y opciones en esta materia. Este desafio especie de cupponatic, lo innove a mi estilo con Vacaciones, que es lo que muchos comenzamos a pensar en esta etapa del año y a otros como a mi ya me hacen falta...
-            <a href="https://github.com/Zonafro/Desafio-N-4" target="GITDesadio4" class="text-success fw-bold">Te invito a unas proximas Vacaciones en CHILE </a>
+            <a href="hhttps://zonafro.github.io/Desafio-N-4/" target="GITDesadio4" class="text-success fw-bold">Te invito a unas proximas Vacaciones en CHILE </a>
           </div>
         </div>
       </div>
@@ -127,7 +127,7 @@
           <img class="DS5" src="/Assets/imgs/D5.jpeg" alt="github">
           <div class="accordion-body">
             <strong>Quinto Desafio.</strong> En esta clase y tutoria aprendi lo que es GIT y GITHUB, me parecio bastante interesante y positivo para ser una herramienta gratuita, aun tengo dudas que en función del tiempo voy resolviendo con videos en youtube o en tutoria. Este desafio me parecio mas facil ya que fue una introducción y solo habia que realizar commit y forkear un proyecto.
-            <a href="https://github.com/Zonafro/Desafio-N-5" target="GITDesadio5" class="text-success fw-bold">Hecha un vistazo a mi GITHUB</a> 
+            <a href="https://zonafro.github.io/Desafio-N-5/" target="GITDesadio5" class="text-success fw-bold">Hecha un vistazo a mi GITHUB</a> 
           </div>
         </div>
       </div>
