--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </button>
         </h2>
         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
-          <img class="DSimpar" src="/Assets/imgs/D1.jpeg" alt="CV">
+          <img class="DSimpar" src="Assets/imgs/D1.jpeg" alt="CV">
           <div class="accordion-body">
             <strong>Primer Desafio.</strong> A continuación, puedes revisar mi primer desafio el cual contemplaba crear un CV en HTML, utilizando la estructura básica de HTML y todas las etiquetas que aprendimos en la primera clase con el profe Ignacio el tutor Francisco.
             <a href="https://zonafro.github.io/Desafio-1-CV-en-Html/" target="GITDesadio1" class="text-success fw-bold">Ingresa al CV en Html</a>
@@ -82,7 +82,7 @@
           </button>
         </h2>
         <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-          <img class="DSpar" src="/Assets/imgs/D2.jpeg" alt="Heladeria">
+          <img class="DSpar" src="Assets/imgs/D2.jpeg" alt="Heladeria">
           <div class="accordion-body">
             <strong>Segundo Desafio.</strong> En esta oportunidad empece a conocer CSS para darle estilo a lo construido en Html. Aprendi a usar colores, bordes, margen y padding entre otros. Ya solte la mano con Html, por lo tanto cree mi primer Landing Page de una Heladeria, aparte de aprender cosas nuevas en Desafio Latam, también empece a innovar en mis proyectos para generar mayor creatividad. 
             <a href="https://zonafro.github.io/Repo-Desafio-N-2/" target="GITDesadio2" class="text-success fw-bold">Conoce la mejor Heladeria de Santiago aqui en ZONAFRO</a>
@@ -96,7 +96,7 @@
           </button>
         </h2>
         <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
-          <img class="DSimpar" src="/Assets/imgs/D3.jpeg" alt="jirafa">
+          <img class="DSimpar" src="Assets/imgs/D3.jpeg" alt="jirafa">
           <div class="accordion-body">
             <strong>Tercer Desafio.</strong> En lenguaje coloquial "Ignacio tiro toda la carne a la parrilla", esta clase tuvo muchisima materia en un solo dia para un desafio que a simple vista se veia facil de realizar, sin embargo creo que el Posicionamiento en CSS es una de las tareas que mayor tiempo requiere. Todo se descuadra, se desborda, las imagenes son un dolor de cabeza al intentar darle su tamaño ideal y definitivamente hay que tener una basta experiencia para terminar un proyecto de este tipo en corto plazo. La creatividad es importante para mi cuando estoy aprendiendo, por lo cual el mamifero mas alto del mundo es el protagonista de este Page.
             <a href="https://zonafro.github.io/Desafio-N-3/" target="GITDesadio3" class="text-success fw-bold">Entra a JIRAFILANDIA</a>
@@ -110,7 +110,7 @@
           </button>
         </h2>
         <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
-          <img class="DSpar" src="/Assets/imgs/D4.jpeg" alt="Cuppon">
+          <img class="DSpar" src="Assets/imgs/D4.jpeg" alt="Cuppon">
           <div class="accordion-body">
             <strong>Cuarto Desafio.</strong> Aprendiendo bootstrap en esta clase, me di cuenta que es mas amigable y facilita mas las cosas al momento de ver todas las dunciones y opciones en esta materia. Este desafio especie de cupponatic, lo innove a mi estilo con Vacaciones, que es lo que muchos comenzamos a pensar en esta etapa del año y a otros como a mi ya me hacen falta...
             <a href="hhttps://zonafro.github.io/Desafio-N-4/" target="GITDesadio4" class="text-success fw-bold">Te invito a unas proximas Vacaciones en CHILE </a>
@@ -124,7 +124,7 @@
           </button>
         </h2>
         <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFive">
-          <img class="DS5" src="/Assets/imgs/D5.jpeg" alt="github">
+          <img class="DS5" src="Assets/imgs/D5.jpeg" alt="github">
           <div class="accordion-body">
             <strong>Quinto Desafio.</strong> En esta clase y tutoria aprendi lo que es GIT y GITHUB, me parecio bastante interesante y positivo para ser una herramienta gratuita, aun tengo dudas que en función del tiempo voy resolviendo con videos en youtube o en tutoria. Este desafio me parecio mas facil ya que fue una introducción y solo habia que realizar commit y forkear un proyecto.
             <a href="https://zonafro.github.io/Desafio-N-5/" target="GITDesadio5" class="text-success fw-bold">Hecha un vistazo a mi GITHUB</a> 
