--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-dark p-2 text-white bg-opacity-75">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-          <img src="/Assets/imgs/jpocv.jpg" class="rounded-circle" height="60"/>
+          <img src="Assets/imgs/jpocv.jpg" class="rounded-circle" height="60"/>
             </a>
             <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="text-white"><i class="bi bi-justify fa-5x"></i>
