--- a/modifica.html
+++ b/modifica.html
@@ -12,7 +12,7 @@
 <body>
     <h1 class="bg-success text-white text-center">EDITA AQUI ABAJO</h1>
     <hr/>
-    <h2>Modificaciones para Desafio Latam <br>Colaboracion para Fernando Lorca:</br></h2>
+    <h2>Modificaciones para Desafio Latam <br>Colaboracion para Fernando Lorca</br></h2>
     <hr/> 
     <h2>Modificaciones para Desafio Latam <br>Colaboracion para:</br></h2>
     <hr/> 
