--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="./Assets/css/style.css">
 
 </head>
 <body>
@@ -68,7 +68,7 @@
           </button>
         </h2>
         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
-          <img class="DSimpar" src="Assets/imgs/D1.jpeg" alt="CV">
+          <img class="DSimpar" src="Assets/imgs/jpocv.jpg" alt="CV">
           <div class="accordion-body">
             <strong>Primer Desafio.</strong> A continuación, puedes revisar mi primer desafio el cual contemplaba crear un CV en HTML, utilizando la estructura básica de HTML y todas las etiquetas que aprendimos en la primera clase con el profe Ignacio el tutor Francisco.
             <a href="https://zonafro.github.io/Desafio-1-CV-en-Html/" target="GITDesadio1" class="text-success fw-bold">Ingresa al CV en Html</a>
