--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </button>
         </h2>
         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
-          <img class="DSimpar" src="Assets/imgs/jpocv.jpg" alt="CV">
+          <img class="DSimpar" src="Assets/imgs/D1.jpeg" alt="CV">
           <div class="accordion-body">
             <strong>Primer Desafio.</strong> A continuación, puedes revisar mi primer desafio el cual contemplaba crear un CV en HTML, utilizando la estructura básica de HTML y todas las etiquetas que aprendimos en la primera clase con el profe Ignacio el tutor Francisco.
             <a href="https://zonafro.github.io/Desafio-1-CV-en-Html/" target="GITDesadio1" class="text-success fw-bold">Ingresa al CV en Html</a>
