--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="./Assets/css/style.css">
+<link rel="stylesheet" href="Assets/css/style.css">
 
 </head>
 <body>
@@ -92,7 +92,7 @@
       <div class="accordion-item">
         <h2 class="accordion-header" id="panelsStayOpen-headingThree">
           <button class="accordion-button collapsed bg-secondary text-white fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-            Desafio #3 Iguana Page
+            Desafio #3 Jirafa Page
           </button>
         </h2>
         <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
@@ -113,7 +113,7 @@
           <img class="DSpar" src="Assets/imgs/D4.jpeg" alt="Cuppon">
           <div class="accordion-body">
             <strong>Cuarto Desafio.</strong> Aprendiendo bootstrap en esta clase, me di cuenta que es mas amigable y facilita mas las cosas al momento de ver todas las dunciones y opciones en esta materia. Este desafio especie de cupponatic, lo innove a mi estilo con Vacaciones, que es lo que muchos comenzamos a pensar en esta etapa del año y a otros como a mi ya me hacen falta...
-            <a href="hhttps://zonafro.github.io/Desafio-N-4/" target="GITDesadio4" class="text-success fw-bold">Te invito a unas proximas Vacaciones en CHILE </a>
+            <a href="https://zonafro.github.io/Desafio-N-4/" target="GITDesadio4" class="text-success fw-bold">Te invito a unas proximas Vacaciones en CHILE </a>
           </div>
         </div>
       </div>
