--- a/modifica.html
+++ b/modifica.html
@@ -16,6 +16,50 @@
     <hr/> 
     <h2>Modificaciones para Desafio Latam <br>Colaboracion para:</br></h2>
     <hr/> 
+    <header>
+        <div class="container-fluid p-0">
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark p-2 text-white bg-opacity-75">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">
+              <img src="Assets/imgs/jpocv.jpg" class="rounded-circle" height="60"/>
+                </a>
+                <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="text-white"><i class="bi bi-justify fa-5x"></i>
+                  </span>
+                </button>     
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a href="https://www.instagram.com/jporfan3/" target="IGJPO" class="nav-link text-white" href="#">Red Social</a>
+                      </li>
+                      <li class="nav-item">
+                        <a href="https://www.linkedin.com/in/juan-pablo-orfanoz-mendieta-435103136/" target="LinkedinJPO" class="nav-link text-white" href="#">Linkedin</a>
+                      </li>
+                      <li class="nav-item">
+                        <a href="https://github.com/Zonafro" target="GITHUBJPO" class="nav-link text-white" href="#">Github</a>
+                      </li>
+                      <li class="nav-item">
+                           <a href="modifica.html" target="Modifica Aqui" class="nav-link text-white" href="#">Modifica Aqui</a>
+                      </li>
+                    
+                    </ul>          
+                  </div>
+              </div>
+            </nav>
+        </div>
+        </header>
+    
+        <section id="informeespecial" class="text-white text-start py-0 mt-0">
+            <div class="container">
+                <div class="ms-1 col-12 col-md-12">
+                    <h1 class="text-center fs-1"><br></br>Juan Pablo Orfanoz</h1>
+                    <br></br>
+                    <h2 class="text-center text-capitalize">Risk Prevention Engineer</h2>
+                    <br></br>
+                    <h2 class="text-center text-capitalize">Student Full Stack JavaScript Developer</h2>
+                </div>
+            </div>
+        </section>
 
 </body>
 </html>
