segundo commit en class accordion

--- a/modifica.html
+++ b/modifica.html
@@ -60,6 +60,22 @@
                 </div>
             </div>
         </section>
+        <main>
+            <div class="accordion" id="accordionPanelsStayOpenExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                  <button class="accordion-button bg-secondary text-white fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                    Challenge #1 My Curriculum Vitae in HTML
+                  </button>
+                </h2>
+                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+                  <img class="DSimpar" src="Assets/imgs/D1.jpeg" alt="CV">
+                  <div class="accordion-body">
+                    <strong>First Challenge.</strong> Now, you can review my first challenge which contemplated creating a CV in HTML, using the basic structure of HTML and all the tags that we learned in the first class with teacher Ignacio the tutor Francisco.
+                    <a href="https://zonafro.github.io/Desafio-1-CV-en-Html/" target="GITDesadio1" class="text-success fw-bold">Enter the CV in Html</a>
+                  </div>
+                </div>
+              </div>
 
 </body>
 </html>
