tercer commit en class accordion item

--- a/modifica.html
+++ b/modifica.html
@@ -76,6 +76,20 @@
                   </div>
                 </div>
               </div>
+        <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+          <button class="accordion-button collapsed bg-secondary text-white fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+            Challenge #2 Building a Landing Page
+          </button>
+        </h2>
+        <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+          <img class="DSpar" src="Assets/imgs/D2.jpeg" alt="Heladeria">
+          <div class="accordion-body">
+            <strong>Second Challenge</strong> In this opportunity I began to know CSS to style what is built in Html. I learned to use colors, borders, margin and padding among others. I already let go of Html, so I created my first Landing Page of an Ice Cream Parlor, apart from learning new things in Desafio Latam, I also started to innovate in my projects to generate more creativity.
+            <a href="https://zonafro.github.io/Repo-Desafio-N-2/" target="GITDesadio2" class="text-success fw-bold">Meet the best ice cream in Santiago in ZONAFRO</a>
+          </div>
+        </div>
+      </div>
 
 </body>
 </html>
