footer icon added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="Assets/css/style.css">
+<script src="https://kit.fontawesome.com/429e6f2d8a.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -154,10 +155,16 @@
     </section> 
 
     <footer>                    
-        </div>             
-        <div class="bg-secondary text-center  text-light">   
-        <h5>@ 2022 Portafolio Juan Pablo Orfanoz - GS26 Desafio Latam</h5>                    
-        </div>
+                     
+        <div class="bg-secondary text-center  text-light">
+          <div class="row">
+            <div class="col-10">  
+            <h5>@ 2022 Portafolio Juan Pablo Orfanoz - GS26 Desafio Latam</h5>                    
+            </div>
+            <div class="col-2">
+              <a href="#navbarSupportedContent"><i class="fa-solid fa-angles-up fa-3x text-dark"></i></a>
+            </div>
+          </div> 
         </div>
     </footer>
 
