borre puntos y cambie un espacio

--- a/modifica.html
+++ b/modifica.html
@@ -14,7 +14,7 @@
     <hr/>
     <h2>Modificaciones para Desafio Latam <br>Colaboracion para Fernando Lorca</br></h2>
     <hr/> 
-    <h2>Modificaciones para Desafio Latam <br>Colaboracion para:</br></h2>
+    <h2>Modificaciones para Desafio Latam <br>Colaboracion para Francisco Moya</br></h2>
     <hr/> 
 
 </body>
