--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a href="https://github.com/Zonafro" target="GITHUBJPO" class="nav-link text-white" href="#">Github</a>
                   </li>
                   <li class="nav-item">
-                    <a href="modifica.html" target="Modifica Aqui" class="nav-link text-white" href="#">Modifica Aqui</a>
+                    <a href="modifica.html" target="Modifica Aqui" class="nav-link text-white" href="#">Modifica Aquí</a>
                   </li>
                 
                 </ul>          
